# csfy

./: .gitignore  README.gpu.md  README.md  config.ini  go.sh  pyproject.toml
csfy/: cli.py  config.py  util_config.py
csfy/api/: main.py  predict_router.py  response_codes.py
csfy/commands/: cmd_export.py  cmd_predict.py  cmd_quantize.py  cmd_serve.py  cmd_train.py  cmd_zip.py
csfy/core/: export_onnx.py  predict_onnx.py  predict_pytorch.py  predictor.py  quantize_onnx.py  train_classifier.py  util_labels.py  util_model.py
